Bug 430744 - "Apply" button of Desktop Session KCM remains greyed out when I change General settings
Summary: "Apply" button of Desktop Session KCM remains greyed out when I change Genera...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_smserver (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: VHI normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2020-12-23 11:57 UTC by Patrick Silva
Modified: 2021-01-06 14:37 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-12-23 11:57:11 UTC
STEPS TO REPRODUCE
1. open System Settings > Startup and Shutdown > Desktop Session
2. check/uncheck any option under "General"
3. 

OBSERVED RESULT
we can not apply the change done in the step 2 because "Apply" button remains greyed out

EXPECTED RESULT
we can apply the change

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.20.80
KDE Frameworks Version: 5.78.0
Qt Version: 5.15.2
Comment 1 Nate Graham 2021-01-05 14:27:37 UTC
Confirmed.
Comment 2 Nate Graham 2021-01-05 14:47:02 UTC
Cyril or Benjamin, can you take a look?
Comment 3 Cyril Rossi 2021-01-05 14:50:11 UTC
(In reply to Nate Graham from comment #2)
> Cyril or Benjamin, can you take a look?

Sure, I will.
Comment 4 Bug Janitor Service 2021-01-06 13:59:38 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/284
Comment 5 Cyril Rossi 2021-01-06 14:37:00 UTC
Git commit 22df6ab486e44e517db4d077b88568f4eb944e66 by Cyril Rossi.
Committed on 06/01/2021 at 13:56.
Pushed by davidedmundson into branch 'master'.

KCM Desktop Session bugfix general settings now enable the Apply button
Restore highlight non default settings at module level
Fix Default state, typo

M  +8    -0    kcms/ksmserver/CMakeLists.txt
M  +8    -8    kcms/ksmserver/kcmsmserver.cpp
M  +3    -3    kcms/ksmserver/kcmsmserver.h
M  +3    -3    kcms/ksmserver/package/contents/ui/main.qml

https://invent.kde.org/plasma/plasma-desktop/commit/22df6ab486e44e517db4d077b88568f4eb944e66