KCM Desktop Session bugfix general settings now enable the Apply button

BUG: 430744
Restore highlight non default settings at module level
Fix Default state, typo